# promptiv

./: .env.example  .gitignore  Dockerfile  PRODUCT-BRIEF.md  README.md  README.txt  all_code_dump.txt  all_file_contents.txt  all_files.txt  docker-compose.yml  file_structure.txt  file_tree.txt  package-lock.json  project_filetree.txt  project_tree.txt  prompt_models.py  pyproject.toml  pytest.ini  redeploy.sh  requirements.txt  sync-live.sh
backend/: .env.example  auth.py  main.py  openai_utils.py  requirements.txt  test_fastapi_clean.py
data/: airports.yaml  destinations.yaml
deploy/: DEPLOY.md  nginx-dashaway.conf  nginx-promptiv.conf  promptiv-digest.service  promptiv-digest.timer  promptiv-refresh.service  promptiv-refresh.timer  promptiv-regen.service  promptiv-regen.timer  promptiv-watch-pulse.service  promptiv-watch-pulse.timer  promptiv-watches.service  promptiv-watches.timer  promptiv.service
dev-tests/: test_fastapi_clean.py
docs/: ARCHITECTURE.md  destination-expansion-candidates.md
frontend/: base-template.html  index.html  login.legacy.html  pricing.html  privacy.html  refund-policy.html  script.js  style.css  terms.html
public/: 404.html  app.js  go.html  index.html  pairings.js  privacy.html  robots.txt  sitemap.xml  styles.css  terms.html  thanks.html  watch.html
scripts/: generate_hubs.py  spike_fli.py
server/: app.py  budget_pages.py  budget_render.py  catch.py  comparison_render.py  comparisons.py  db.py  destinations.py  digest.py  email_client.py  fli_client.py  hub_render.py  hubs.py  migrations.py  pairings.py  price_refresh.py  (+8 more)
(+140 files in other folders)
