[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptiv-teaser"
version = "0.0.1"
description = "Promptiv teaser site — Flask backend + static frontend"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "resend>=2.0",
    "gunicorn>=23.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["server*"]
exclude = ["tests*", "deploy*", "public*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--ignore=tests/e2e"

[tool.pyright]
include = ["server", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/.superpowers"]
extraPaths = ["."]
reportMissingImports = "warning"
# Pytest fixtures are passed by parameter name; Pyright doesn't understand the
# convention and flags them as unused. Silence that noise project-wide.
reportUnusedParameter = "none"
# Flask @app.route decorators register functions but they're never called by
# name. Same noise pattern as pytest fixtures.
reportUnusedFunction = "none"
